[package]
name = "good_or_bad_day"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
telegram-bot = { git = "https://github.com/telegram-rs/telegram-bot", branch = "main" }
tokio = { version = "1.20", features = ["full"] }
futures = "0.3"
tokio-postgres = "0.7.6"
